fix text alignment on other info

--- a/src/style.css
+++ b/src/style.css
@@ -178,7 +178,9 @@ h2 {
 		grid-column: 1/3;
 		justify-content: center;
 	}
-
+	#titleContainer {
+		text-align: center;
+	}
 	#threeDayContainer {
 		grid-row: 4/5;
 	}
